# nexus-dht11

./: .gitignore  CMakeLists.txt  Makefile  README.md  west.yml
.github/workflows/: ci.yml
include/: dht11.h  dht11_defs.h
src/: dht11.c
tests/: CMakeLists.txt  test_dht11_init.cpp  test_dht11_read.cpp  test_dht11_utils.cpp
